  `maxProjections` option:

      FOR doc IN collection OPTIONS { maxProjections: 2 } 
        RETURN [ doc.value1, doc.value2, doc.value3 ]

  The default value for `maxProjections` is `5`, which is compatible with the
  previous hard-coded default value.

* Fixed potentially undefined behavior for exit code of arangodump.

* Ignore signals such as SIGPIPE in client tools.

* Fixed ES-1025: fixed a performance regression caused by different hash
  calculation for primitive types like `uint64_t` and new the `Identifier`
  wrapper and derived types.

* APM-292: Added new AQL function SHARD_ID.

* BTS-707: rename "hardened" option value for `--server.support-info-api`
  startup option to "admin".

* Extend timeouts for caching collection counts and index selectivity estimates
  on coordinators from 15s/90s to 180s. This change will cause less requests to
  be made from coordinators to DB servers to refresh info about collection
  counts and index estimates as part of AQL queries. The cached info is used in
  cluster query execution plans only and is not required to be fully up-to-date.

* When creating a new database the value of the write concern has to be smaller
  or equal to the replication factor. Otherwise an error message will be displayed
  and no database will be created.
  
* Fixed BTS-693: Sort-limit rule now always ensures proper LIMIT node placement
  to avoid possible invalid results in the fullCount data.

* Added new AQL function SHARD_ID.

* Updated OpenSSL to 1.1.1m and OpenLDAP to 2.6.0.

* Improved performance in replication dump protocol by inserting arrays of 
  documents instead of one document at a time and also not retrieving the
  document revision field when not needed.

* Changed various default values for RocksDB to tune operations for different
  typical scenarios like gp2 type volumes and gp3 type volumes and locally
  attached SSDs with RAID0:
  - `--rocksdb.level0-slowdown-trigger` has been decreased from 20 to 16