@@ -35,6 +35,8 @@ devel
 
 * Ignore signals such as SIGPIPE in client tools.
 
+* Fixed issue #14576: FATAL {crash} occurs on a simple query.
+
 * Fixed ES-1025: fixed a performance regression caused by different hash
   calculation for primitive types like `uint64_t` and new the `Identifier`
   wrapper and derived types.
